--- a/AmazonBookstore/Views/Home/Index.cshtml
+++ b/AmazonBookstore/Views/Home/Index.cshtml
@@ -2,61 +2,46 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model IQueryable<Book>
+@model BookListViewModel
+
+@*3 New Bootstrap Commands I used:*@
+@*1. "form-control mr-sm-2" for the search bar.*@
+@*2. "shadow-sm" to create small shadows for the cards*@
+@*3. "col-sm-2" and "col-sm-10" for adjusting when the window size shrinks*@
 
 <div class="container">
-
-    <h1>Bookstore</h1>
-
-    @foreach (var x in Model)
-    {
-        <div class="card card-outline-primary m-1 p-1">
-            <div class="bd-faded p-1">
-                <h3>@x.Title</h3>
-                <p><b>Author:</b> @x.AuthorFirst @x.AuthorMiddle @x.AuthorLast</p>
-                <p><b>Publisher:</b> @x.Publisher</p>
-                <p><b>ISBN:</b> @x.ISBN</p>
-                <p><b>Classification:</b> @x.Classification</p>
-                <p><b>Category:</b> @x.Category</p>
-                <span class="bade badge-pill badge-primary" style="float:right;text-align:center;">
-                    <small><b>Price:</b> $@x.Price</small>
-                </span>
+    <div class="row">
+        <div class="col-md-2 col-sm-2">
+            <div class="showcase-left">
+                <h4>There will be a list of categories in this column.</h4>
             </div>
         </div>
-    }
-
-    <br />
-    <h3>Table Version</h3>
-    <br />
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Author Firstname</th>
-                <th>Author Middlename</th>
-                <th>Author Lastname</th>
-                <th>Publisher</th>
-                <th>ISBN</th>
-                <th>Classification</th>
-                <th>Category</th>
-                <th>Price</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var x in Model)
-            {
-            <tr>
-                <td>@x.Title</td>
-                <td>@x.AuthorFirst</td>
-                <td>@x.AuthorMiddle</td>
-                <td>@x.AuthorLast</td>
-                <td>@x.Publisher</td>
-                <td>@x.ISBN</td>
-                <td>@x.Classification</td>
-                <td>@x.Category</td>
-                <td>$@x.Price</td>
-            </tr>
-            }
-        </tbody>
-    </table>
+        <div class="col-md-10 col-sm-10">
+            <div class="showcase-right">
+                @foreach (var x in Model.Books)
+                {
+                    <div class="card card-outline-primary m-1 p-1 shadow-sm">
+                        <div class="bd-faded p-1">
+                            <h3>@x.Title</h3>
+                            <p><b>Author:</b> @x.AuthorFirst @x.AuthorMiddle @x.AuthorLast</p>
+                            <p><b>Publisher:</b> @x.Publisher</p>
+                            <p><b>ISBN:</b> @x.ISBN</p>
+                            <p><b>Classification:</b> @x.Classification</p>
+                            <p><b>Category:</b> @x.Category</p>
+                            <p><b>Print Length:</b> @x.PrintLength pages</p>
+                            <span class="bade badge-pill badge-primary" style="float:right;text-align:center;">
+                                <small><b>Price:</b> $@x.Price</small>
+                            </span>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+    <div class="text-center">
+        <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn"
+             page-class-normal="btn-outline-dark"
+             page-class-selected="btn-primary"
+             class="btn-group m-1"></div>
+    </div>
 </div>
