--- a/AmazonBookstore/Views/Shared/_Layout.cshtml
+++ b/AmazonBookstore/Views/Shared/_Layout.cshtml
@@ -8,10 +8,45 @@
     @*App is using Bootstrap*@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
+    <nav class="navbar navbar-dark fixed-top text-white bg-dark">
+        <div class="container">
+            <div class="navbar-header">
+                <span class="navbar-brand ml-2">Bookstore</span>
+            </div>
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+
     <div>
         @RenderBody()
     </div>
+
+
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+
+    @*Add animation effects*@
+    <script>window.sr = ScrollReveal();
+        sr.reveal('.navbar', {
+            duration: 2000,
+            origin: 'top',
+            distance: '50px'
+        });
+        sr.reveal('.showcase-left', {
+            duration: 2000,
+            origin: 'bottom',
+            distance: '100px'
+        });
+        sr.reveal('.showcase-right', {
+            duration: 2000,
+            origin: 'right',
+            distance: '300px'
+        });</script>
 </body>
 </html>
