--- a/AmazonBookstore/Views/_ViewImports.cshtml
+++ b/AmazonBookstore/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using AmazonBookstore
 @using AmazonBookstore.Models
+@using AmazonBookstore.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AmazonBookstore
+
+@*adding the tag helper I created*@
