--- a/AmazonBookstore/wwwroot/css/site.css
+++ b/AmazonBookstore/wwwroot/css/site.css
@@ -61,6 +61,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  margin-top: 70px;
 }
 .footer {
   position: absolute;
