--- a/AmazonBookstore/Views/Shared/_Layout.cshtml
+++ b/AmazonBookstore/Views/Shared/_Layout.cshtml
@@ -33,20 +33,25 @@
 
     @*Add animation effects*@
     <script>window.sr = ScrollReveal();
-        sr.reveal('.navbar', {
+        @*sr.reveal('.navbar', {
             duration: 2000,
             origin: 'top',
             distance: '50px'
-        });
-        sr.reveal('.showcase-left', {
+        });*@
+        @*sr.reveal('.showcase-left', {
             duration: 2000,
             origin: 'bottom',
             distance: '100px'
-        });
+        });*@
         sr.reveal('.showcase-right', {
-            duration: 2000,
+            duration: 1000,
             origin: 'right',
-            distance: '300px'
+            distance: '100px'
+        });
+        sr.reveal('.page-number', {
+            duration: 1000,
+            origin: 'bottom',
+            distance: '100px'
         });</script>
 </body>
 </html>
