--- a/AmazonBookstore/Views/Shared/BookSummary.cshtml
+++ b/AmazonBookstore/Views/Shared/BookSummary.cshtml
@@ -13,4 +13,12 @@
             <small><b>Price:</b> $@Model.Price</small>
         </span>
     </div>
+
+    <form id="@Model.BookId" asp-page="/Shop" method="POST">
+        <input type="hidden" asp-for="BookId"/>
+        <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()"/>
+        <span class="card-text p-1">
+            <button type="submit" class="btn-warning btn-sm pull-right" style="float:right">Add to Cart</button>
+        </span>
+    </form>
 </div>
