--- a/AmazonBookstore/Views/_ViewImports.cshtml
+++ b/AmazonBookstore/Views/_ViewImports.cshtml
@@ -1,7 +1,8 @@
 ﻿@using AmazonBookstore
 @using AmazonBookstore.Models
 @using AmazonBookstore.Models.ViewModels
+@using AmazonBookstore.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AmazonBookstore
 
-@*adding the tag helper I created*@
+@*adding the infrastructure*@
