--- a/AmazonBookstore/Views/Shared/_Layout.cshtml
+++ b/AmazonBookstore/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
             <div class="col-6 text-right">
+                @*cart summary displayed on nav bar*@
                 <vc:cart-summary/>
             </div>
         </div>
